switch li spacing from px to percentage. fix home button

--- a/recipes/stylesmores.css
+++ b/recipes/stylesmores.css
@@ -45,7 +45,7 @@ li {
 .list {
     background-color: bisque;
     padding: 10px 30px;
-    width: 900px;
+    width: 96%;
     margin: 0 auto;
 }
 
